# rondo

./: .env  .gitignore  alembic.ini  backend.Dockerfile  docker-compose.yml  dump.rdb  main.py  nginx.conf  package-lock.json  package.json  pyproject.toml  requirements.txt  reset_db.py  reset_migrations.py  send_test_email.py
alembic/: env.py
alembic/versions/: 00e37d5bafec_a2.py  01ee5dcbbfda_add.py  0278f9dd554c_migr2.py  031b8e3016ed_update_model_for_tags_v8.py  04fd07638007_fix.py  0665b98f45aa_fix_migratie.py  0e7afd9451ea_add_new_model.py  15d6032c2291_add_courts_reservation.py  18ff7b2e1da1_a5.py  1e6a45f350c8_add_courts.py  247b1c214019_a1.py  2cc44ef44518_add_courts.py  2ceacdd585cb_add_new_mol.py  2edc19193ed7_fix_migration_issue.py  2fd47454f7cd_initial.py  34300a99e720_merge_branches.py  35e14a5bc95d_migr3.py  364df179357d_initial_migration.py  3a7a486ef0b5_add_cour.py  3b6bea80168f_add_c.py  3bcf7fe2413e_fix_migration_issue.py  3c7e9e903227_migr6.py  3cdd9e920f2f_fix_migratie.py  3dcf0fc46e76_mig4.py  3e8d9b6927fe_a6.py  3f3ba64b3912_update_event_timezone.py  40dd31f05764_update.py  42552a1741db_add_courts.py  4779d53ad208_add_courts.py  486095e6c46b_add_cou.py  488239f0ae93_update_2.py  4f8ed6af6360_create_all_tables.py  5a504192cc32_add_count_members_column.py  6b5f47d56a4d_add_courts.py  6e1144fc0da1_add_courts.py  724370fa4e00_remove_timezone_from_datetime.py  7315cc3ce7d0_remove_timezone_from_datetime_fields.py  7a38fff0690b_add_c2.py  818ceb984960_add_c3.py  85d9a91971c7_update_event.py  (+18 more)
app/: config.py  conftest.py  create_superuser.py  database.py  exceptions.py  main.py
app/additional_registration/: dao.py  model.py  router.py  schemas.py
app/admin/: auth.py  view.py
app/court_reservation/: dao.py  model.py  router.py  schemas.py
app/courts/: dao.py  model.py  router.py  schemas.py
app/coworking/: dao.py  model.py  router.py  schemas.py
app/coworking_reservation/: dao.py  model.py  router.py  schemas.py
app/dao/: base.py
app/event_tags/: dao.py  model.py  router.py  schemas.py
app/events/: dao.py  model.py  router.py  schemas.py
app/payments/: service.py
app/registration/: dao.py  model.py  router.py  schemas.py
app/tags/: dao.py  model.py  router.py  schemas.py
app/tasks/: celery_app.py  service.py  tasks.py
app/tests/: conftest.py  mock_additional_registration.json  mock_events.json  mock_registration.json  mock_users.json
app/tests/unit_tests\test_user/: test_api.py
app/users/: auth.py  dao.py  dependencies.py  model.py  router.py  schemas.py
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.js  vite.config.ts
frontend/src/: App.tsx  env.d.ts  index.css  main.tsx
frontend/src/api/: api.ts  config.ts  services.ts
frontend/src/components/: AdminEventTags.tsx  AdminRoute.tsx  AdminSidebar.tsx  AnimatedLogo.tsx  AuthForm.tsx  ErrorBoundary.tsx  ErrorPage.tsx  EventCard.tsx  EventTags.tsx  Footer.tsx  LoadingSpinner.tsx  Navbar.tsx  PageTransition.tsx  ProtectedRoute.tsx  TagsManager.tsx  ThemeToggle.tsx
frontend/src/context/: AuthContext.tsx  ThemeContext.tsx
frontend/src/hoc/: withRouter.tsx
(+32 files in other folders)
