[project]
name = "rondo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.15.1",
    "argon2-cffi>=23.1.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.115.11",
    "greenlet>=3.1.1",
    "pydantic[email]>=2.10.6",
    "pydantic-settings>=2.8.1",
    "python-jose>=3.4.0",
    "sqlalchemy>=2.0.38",
    "uvicorn>=0.34.0",
    "sqladmin>=0.20.1",
    "itsdangerous>=2.2.0",
    "celery>=5.4.0",
    "redis>=5.2.1",
    "aioredis>=2.0.1",
    "email-validator>=2.2.0",
    "flower>=2.0.1",
    "black>=25.1.0",
    "flake8>=7.1.2",
    "autoflake>=2.3.1",
    "isort>=6.0.1",
    "pyright>=1.1.396",
    "ruff>=0.11.0",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.25.3",
]
[tool.ruff]
line-length = 88  
target-version = "py312"  

[tool.ruff.lint]
select = [
    "E",  # Ошибки стиля (pycodestyle)
    "F",  # Ошибки кода (flake8)
    "I",  # Упорядочивание импортов
    "UP", # Обновление кода до новых стандартов Python
]

ignore = [
 "E501"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-v --tb=short"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
