[project]
name = "rondo"
version = "0.1.0"
description = "Rondo project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.1",
    "argon2-cffi==23.1.0",
    "asyncpg==0.29.0",
    "fastapi==0.110.0",
    "greenlet==3.1.1",
    "pydantic[email]==2.10.6",
    "pydantic-settings==2.8.1",
    "python-jose==3.4.0",
    "sqlalchemy==2.0.28",
    "uvicorn==0.27.1",
    "sqladmin==0.17.0",
    "itsdangerous==2.2.0",
    "celery==5.4.0",
    "redis==5.0.2",
    "email-validator==2.2.0",
    "flower==2.0.1",
    "black==24.2.0",
    "flake8==7.0.0",
    "autoflake==2.3.0",
    "isort==5.13.2",
    "pyright==1.1.350",
    "ruff==0.2.2",
    "pytest==8.0.2",
    "pytest-asyncio==0.23.5",
    "httpx==0.27.0",
    "fastapi-cache2==0.2.1",
    "gunicorn==21.2.0",
    "asgiref>=3.8.1",
    "yookassa>=3.5.0",
]
[tool.ruff]
line-length = 88  
target-version = "py312"  

[tool.ruff.lint]
select = [
    "E",  # Ошибки стиля (pycodestyle)
    "F",  # Ошибки кода (flake8)
    "I",  # Упорядочивание импортов
    "UP", # Обновление кода до новых стандартов Python
]

ignore = [
 "E501"
]

[tool.pytest.ini_options]
minversion = "6.0"
pythonpath = ["."]
testpaths = ["app/tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
python_classes = ["Test*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"  
addopts = "--asyncio-mode=auto --disable-warnings"
